<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.addCategoryFragment">



    <EditText
        android:id="@+id/et_categoryname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_ruta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone" />
    <EditText
        android:id="@+id/et_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone" />
    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone" />


    <Button
        android:id="@+id/bt_add_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_lugar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>