<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="428dp"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/groupback" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="450dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/white_card"
        android:orientation="vertical"
        android:padding="20dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#090808"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:padding="8dp"
            android:background="@drawable/edittext_back"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:layout_marginTop="16dp"
            android:textColorHint="#888383"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_back"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="#888383" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#F6C70D"
            android:text="@string/login"
            android:textAlignment="center"
            android:elevation="15dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/msg_olvido"
            android:textAlignment="center"
            android:textColor="#FF1744"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/log" />
</androidx.constraintlayout.widget.ConstraintLayout>