<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PagarSinpeFragment">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="408dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="56dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#050505"
            android:src="@drawable/ic_lockb" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/msg_transacción"
            android:textColor="#050505"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="403dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_one" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="373dp"
            android:layout_height="46dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/msg_realiza"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="403dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_two" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="373dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:text="@string/msg_ingresaC"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="403dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_three" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="373dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/msg_completarO"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="356dp"

        android:layout_marginStart="1dp"
        android:background="@drawable/background_show"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/msg_tipo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/boder_top"
                android:ems="10"
                android:hint="Cédula Física"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/msg_numb"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvnumbCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/boder_botton"
                android:ems="10"
                android:hint="105420523"
                android:inputType="number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/msg_titular" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton"
            android:text="@string/btn_completarOrden"
            android:textColor="@color/black"
            app:iconTint="#FFEB3B" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>